# 17/nov/2008

* Retiramos o conteúdo da tag <title> para deixar os arquivos menos poluídos, e os substituímos pelos respectivos nomes dos arquivo HTML.
* Retiramos a maior parte das tags <meta> para reduzir a poluição dos arquivos.
* Renomeamos form_spinner.gif para spinner_form.gif.
* Renomeados facebox_spinner.gif para spinner_selection.gif.
* Retiramos os números que havia após os nomes dos arquivos CSS. Exemplo: layout_ie.css?1234567890 passou a ser apenas layout_ie.css. Estes números não tinham nenhuma importância para o trabalho de estilização, mas tornavam o código ligeiramente mais poluído.
* Retiramos as referências para os arquivos javascript, pois são desnecessárias para o processo de estilização.
* Retiramos as referências para o arquivo 04_admin.css. A parte de admin não é englobada pelo template.
* Reduzimos o tamanho das propriedades alt e title para reduzir a poluição.
* Fizemos com que todos os links passem a apontar apenas para "#". Isso também ajudou a reduzir a poluição visual.
* Retiramos uma chamada javascript relativa ao Google Analytics que aparecia ao final de cada arquivo.
* Indentação nos links para os arquivos CSS.
* Movemos os diretórios images e stylesheets para a raiz.
* Retiramos todos os eventos de javascript que estavam presentes em algumas páginas HTML.
* Melhoramos a formatação da ficha técnica para facilitar a compreensão de sua organização.

# 18/nov/2008

* Página de instruções atualizada, com índice.
* Consertamos os links da página instrucoes.html. Agora eles levam a algum lugar.
* Inserimos uma linha com a folha de estilo 03_color_screen_handheld contendo efetivamente o media="handheld".
* Novas seções, e uma tabela com todas as situações possíveis.